# Infoga

./: infoga.py  pyproject.toml
